--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Midi playground</title>
     <style>
         *{
             box-sizing: border-box;
@@ -13,8 +13,7 @@
             padding:0;
         }
         .container {
-            width: 80%;
-            max-width: 1200px;
+            max-width: 350px;
             margin: 0 auto;
             height: 100vh;
             display: flex;
@@ -32,6 +31,16 @@
         }
         .arrows{
             cursor: pointer;
+        }
+        a {
+            display: inline;
+            text-decoration: none;
+        }
+        .author{
+            text-align: right;
+            width: 100%;
+            margin-top: 3px;
+            margin-right: 15px;
         }
     </style>
 </head>
@@ -57,8 +66,11 @@
         </fieldset>
         <fieldset style="height:auto;">
             <p>You can use your keyboard to play notes or connect a MIDI keyboard to play full range.</p>
-            <p>Feel free to change the instrument</p>
+            <p>Feel free to change the instrument or just upload a MIDI file and enjoy!</p>
         </fieldset>
+        <p class="author">
+            made by <a href="https://github.com/sujumayas">@sujumayas</a>
+        </p>
 
         
     </div>
